# easy-to-you-automation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api.md  installation.md  troubleshooting.md  usage.md
scripts/: easy4us.py  main.py
src/: __init__.py  decoder.py  session.py  utils.py
src/easytoyou/: __init__.py  decoder.py  exceptions.py  session.py
